# mulvad-relay-list

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build_relay_list.py  manifest.json  pyproject.toml  relays.csv  relays.json  relays.pac  relays.txt
.github/workflows/: proxy-pipeline.yml
.kiro/specs/github-workflows-proxy-outputs/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/pipelines-proxy-enrichment/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: spec.md
examples/: sample_mullvad_relays.json  sample_mullvad_relays.pac  sample_mullvad_relays.txt
mullvad/: __init__.py  api.py  enrich.py  errors.py  output.py  pipeline.py  proxy_checker.py  randomizer.py  transform.py  validation.py  verifier.py
scripts/: export_relays_csv.py  verify_proxies.py
tests/: test_cli.py  test_enrich.py  test_output.py  test_pipeline.py  test_randomizer.py  test_transform.py  test_validation.py  test_verify_proxies.py  test_workflows.py
tests/data/: proxy_scraper_checker_output.json  proxy_scraper_checker_wrapped.json  wireguard_sample.json
